syntax = "proto3";

package inventory;

// Inventory service definition
service InventoryService {
  rpc GetStock (GetStockRequest) returns (StockResponse);
  rpc ReserveStock (ReserveStockRequest) returns (ReservationResponse);
  rpc ReleaseStock (ReleaseStockRequest) returns (ReleaseResponse);
  rpc ConfirmReservation (ConfirmReservationRequest) returns (ConfirmationResponse);
  rpc UpdateStock (UpdateStockRequest) returns (StockResponse);
  rpc GetLowStockProducts (GetLowStockRequest) returns (LowStockListResponse);
}

// Request messages
message GetStockRequest {
  string product_id = 1;
  optional string variant_id = 2;
}

message ReserveStockRequest {
  string order_id = 1;
  repeated StockReservationItem items = 2;
  int32 expiration_minutes = 3;  // Reservation expiration time
}

message ReleaseStockRequest {
  string reservation_id = 1;
  optional string reason = 2;
}

message ConfirmReservationRequest {
  string reservation_id = 1;
  string order_id = 2;
}

message UpdateStockRequest {
  string product_id = 1;
  string variant_id = 2;
  int32 quantity = 3;
  string operation = 4;  // "ADD", "SUBTRACT", "SET"
  optional string reason = 5;
}

message GetLowStockRequest {
  int32 threshold = 1;
  int32 page = 2;
  int32 limit = 3;
}

// Response messages
message StockResponse {
  string product_id = 1;
  string variant_id = 2;
  int32 available_quantity = 3;
  int32 reserved_quantity = 4;
  int32 total_quantity = 5;
  string updated_at = 6;
}

message ReservationResponse {
  string reservation_id = 1;
  string order_id = 2;
  bool success = 3;
  repeated ReservationItemResult items = 4;
  string expires_at = 5;
  optional string error_message = 6;
}

message ReleaseResponse {
  bool success = 1;
  string message = 2;
  repeated ReleasedItem items = 3;
}

message ConfirmationResponse {
  bool success = 1;
  string message = 2;
}

message LowStockListResponse {
  repeated LowStockItem items = 1;
  PaginationMeta meta = 2;
}

// Shared messages
message StockReservationItem {
  string product_id = 1;
  string variant_id = 2;
  int32 quantity = 3;
}

message ReservationItemResult {
  string product_id = 1;
  string variant_id = 2;
  int32 requested_quantity = 3;
  int32 reserved_quantity = 4;
  bool success = 5;
  optional string error = 6;
}

message ReleasedItem {
  string product_id = 1;
  string variant_id = 2;
  int32 quantity = 3;
}

message LowStockItem {
  string product_id = 1;
  string variant_id = 2;
  string product_name = 3;
  string sku = 4;
  int32 current_quantity = 5;
  int32 threshold = 6;
}

message PaginationMeta {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 total_pages = 4;
  bool has_next_page = 5;
  bool has_previous_page = 6;
}
