syntax = "proto3";

package product;

// Product service definition
service ProductService {
  rpc FindAll (FindAllProductsRequest) returns (ProductListResponse);
  rpc FindOne (FindOneProductRequest) returns (ProductResponse);
  rpc Create (CreateProductRequest) returns (ProductResponse);
  rpc Update (UpdateProductRequest) returns (ProductResponse);
  rpc Delete (DeleteProductRequest) returns (DeleteProductResponse);
  rpc FindByCategory (FindByCategoryRequest) returns (ProductListResponse);
  rpc CheckAvailability (CheckAvailabilityRequest) returns (AvailabilityResponse);
}

// Request messages
message FindAllProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
  optional string category_id = 5;
  optional string search = 6;
  repeated string tags = 7;
}

message FindOneProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double base_price = 3;
  string category_id = 4;
  repeated ProductVariantInput variants = 5;
  repeated string image_urls = 6;
}

message UpdateProductRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional double base_price = 4;
  optional string category_id = 5;
  repeated ProductVariantInput variants = 6;
  repeated string image_urls = 7;
  optional bool is_active = 8;
}

message DeleteProductRequest {
  string id = 1;
}

message FindByCategoryRequest {
  string category_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message CheckAvailabilityRequest {
  string product_id = 1;
  string variant_id = 2;
  int32 quantity = 3;
}

// Response messages
message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double base_price = 4;
  string category_id = 5;
  repeated ProductVariant variants = 6;
  repeated string image_urls = 7;
  bool is_active = 8;
  string created_at = 9;
  string updated_at = 10;
}

message ProductListResponse {
  repeated ProductResponse products = 1;
  PaginationMeta meta = 2;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

message AvailabilityResponse {
  bool available = 1;
  int32 available_quantity = 2;
  string message = 3;
}

// Shared messages
message ProductVariant {
  string id = 1;
  string sku = 2;
  string size = 3;
  string color = 4;
  double price_modifier = 5;
  int32 stock_quantity = 6;
}

message ProductVariantInput {
  string sku = 1;
  string size = 2;
  string color = 3;
  double price_modifier = 4;
}

message PaginationMeta {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 total_pages = 4;
  bool has_next_page = 5;
  bool has_previous_page = 6;
}
